# VSTCompare

./: .gitignore  CMakeLists.txt  LICENSE.md  README-Japanese.md  README.md
include/vstcompare/: analysis_signal.hpp  cli.hpp  dynamics_test_manager.hpp  frequency_test_manager.hpp  harmonic_test_manager.hpp  interfaces.hpp  ir_test_manager.hpp  latency_alignment.hpp  mono_to_stereo_width_test_manager.hpp  phase_test_manager.hpp  pipeline.hpp  pitch_test_manager.hpp  report_builder.hpp  subprocess_plugin_host.hpp  thd_test_manager.hpp  time_response_test_manager.hpp  types.hpp  vst3_plugin_host.hpp  worker_ipc.hpp  worker_server.hpp
src/: analysis_signal.cpp  cli.cpp  dynamics_test_manager.cpp  frequency_test_manager.cpp  harmonic_test_manager.cpp  ir_test_manager.cpp  latency_alignment.cpp  main.cpp  mono_to_stereo_width_test_manager.cpp  phase_test_manager.cpp  pipeline.cpp  pitch_test_manager.cpp  report_builder.cpp  subprocess_plugin_host.cpp  thd_test_manager.cpp  time_response_test_manager.cpp  vst3_plugin_host.cpp  worker_ipc.cpp  worker_server.cpp
tests/: cli_parse_test.cpp  dynamics_test_manager_test.cpp  frequency_test_manager_test.cpp  harmonic_test_manager_test.cpp  ir_metrics_test.cpp  latency_alignment_test.cpp  mono_to_stereo_width_test.cpp  phase_test_manager_test.cpp  pitch_test_manager_test.cpp  report_builder_json_test.cpp  thd_test_manager_test.cpp  time_response_test_manager_test.cpp
